--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 @import "./scss/index.scss";
-.App {
-  h1 {
-    color: $primary-color;
-  }
+
+.success {
+  border: 1px solid $success;
+  background-color: $background-success;
+}
+.error {
+  border: 1px solid $error;
+  background-color: $background-error;
 }
