--- a/src/components/Admin/MenuSider/MenuSider.scss
+++ b/src/components/Admin/MenuSider/MenuSider.scss
@@ -6,4 +6,8 @@
   position: fixed;
   left: 0;
   top: 65px;
+  &__nav-text {
+    display: flex !important;
+    justify-content: left !important;
+  }
 }
